# vrs-extractor

./: README.md  pyproject.toml
aria_vrs_extractor/: __init__.py  cli.py  config.py  constants.py  io.py  logger.py  paths.py  provider.py  quality.py  status.py  timeutils.py
aria_vrs_extractor/operations/: __init__.py  audio.py  bt.py  et.py  events.py  gps.py  imu.py  manifest.py  rgb.py  wifi.py
tests/: test_config.py  test_events.py  test_io.py  test_manifest.py
